--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AAA_Jailbreak.cpp" />
+    <ClCompile Include="Prison.cpp" />
+    <ClCompile Include="Room.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Prison.h" />
+    <ClInclude Include="Room.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
