--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="AAA_Jailbreak.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Room.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Prison.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Room.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Prison.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
