--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj
@@ -128,10 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AAA_Jailbreak.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Prison.cpp" />
     <ClCompile Include="Room.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Prison.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
