--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NPC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Room.h">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NPC.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
