Fight, Enemy Class, and Room class produce build errrors.
Suspect that how pointers are set as well as inheriting is causing build errors

--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Trader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputHandling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Room.h">
@@ -61,6 +64,9 @@
     </ClInclude>
     <ClInclude Include="Trader.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputHandling.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
