Errors with Enemy and Room pointers. Causuing build errors.
Files: Enemy.h, fighting.cpp, and NPC.h to name a few

--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="AAA_Jailbreak.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Fight.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -138,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Fight.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
