--- a/AAA_Jailbreak/AAA_Jailbreak.vcxproj
+++ b/AAA_Jailbreak/AAA_Jailbreak.vcxproj
@@ -128,7 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AAA_Jailbreak.cpp" />
-    <ClCompile Include="Fight.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Fighting.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -137,7 +138,8 @@
     <ClCompile Include="Trader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Fight.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Fighting.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
